# openstack-ansible-os_prometheus_server

./: README.rst  setup.cfg
defaults/: main.yml
doc/: Makefile
doc/source/: conf.py
extras/: haproxy_prometheus.yml  os-prometheus-install.yml
extras/conf.d/: prometheus.yml.example
extras/env.d/: prometheus.yml
files/: alert.rules  default.tmpl
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: install.yml  main.yml  post_install.yml  pre_install.yml  prometheus_init.yml  prometheus_init_common.yml  prometheus_init_systemd.yml  prometheus_init_upstart.yml
templates/: alertmanager.yml.j2  prometheus.yml.j2  prometheus_hosts.j2  prometheus_systemd_init.j2  prometheus_upstart_init.j2
tests/: inventory  test-install-prometheus.yml  test-vars.yml  test.yml
vars/: ubuntu-16.04.yml
